# MLOpsTask

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
configs/: data.yaml  logging.yaml  model.yaml  train.yaml
configs/data/: default.yaml
configs/logging/: default.yaml
configs/model/: mlp.yaml
src/crypto_lob/: .commands.py.swp  commands.py
src/crypto_lob/datamodules/: lob_dm.py
src/crypto_lob/export/: onnx_export.py
src/crypto_lob/models/: mlp_module.py  tcn_module.py
src/crypto_lob/serving/: build_repo.py
